# temporal-async-activity

./: .env  Dockerfile  Makefile  README.md  client.py  docker-compose.yml  http_service.py  pyproject.toml  settings.py  worker.py
activities/: async_activity.py
gateways/: http_api_gateway.py
workflows/: call_service_workflow.py
